# Kaggle

./: pyproject.toml
Titanic/: CatBoost.ipynb  DataAnalysis.ipynb  LightGBM.ipynb  LogisticRegression.py  RandomForest.py  RandomForest2.ipynb  SupportVectorMachine.py  XGBoost.ipynb
Titanic/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
Titanic/catboost_info/learn/: events.out.tfevents
Titanic/catboost_info/test/: events.out.tfevents
Titanic/data/: submittion_catboost.csv  submittion_lightgbm.csv  submittion_logistic.csv  submittion_logistic2.csv  submittion_randomforest.csv  submittion_randomforest2.csv  submittion_xgboost.csv
