[project]
name = "kaggle"
version = "0.1.0"
description = ""
authors = [
    {name = "Takuma Nomoto"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "ipython (>=9.3.0,<10.0.0)",
    "jupyterlab (>=4.4.3,<5.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "xgboost (>=3.0.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
